[gd_scene load_steps=14 format=4 uid="uid://4d1pgbl6b08b"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_84apw"]
[ext_resource type="Script" path="res://generic/waves/path.gd" id="2_0c63k"]
[ext_resource type="TileSet" uid="uid://bfvqoixicrhwo" path="res://generic/other/terrain.tres" id="2_goysy"]
[ext_resource type="Script" path="res://generic/waves/wavemanager.gd" id="3_nm12d"]
[ext_resource type="Script" path="res://generic/waves/wavesettings.gd" id="4_2p31x"]
[ext_resource type="PackedScene" uid="uid://beafduixkdcu0" path="res://scenes/towers/tower_spot.tscn" id="4_shn85"]
[ext_resource type="PackedScene" uid="uid://cvui7y0o1asn" path="res://scenes/enemies/water_bubble.tscn" id="7_7i1a0"]
[ext_resource type="PackedScene" uid="uid://w0sm6xpyscnt" path="res://scenes/ui/hud.tscn" id="7_lyf5f"]
[ext_resource type="PackedScene" uid="uid://bc8f35gquu73l" path="res://scenes/enemies/hasty_cloud.tscn" id="8_86v1t"]
[ext_resource type="PackedScene" uid="uid://rrlmw1lyan8w" path="res://scenes/enemies/storm_giant.tscn" id="9_jtiae"]
[ext_resource type="PackedScene" uid="uid://u0t8foxejah8" path="res://scenes/enemies/bert.tscn" id="9_nby30"]
[ext_resource type="Script" path="res://generic/waves/endlesswave.gd" id="11_efw4y"]

[sub_resource type="Curve2D" id="Curve2D_p5cak"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -12, 25, 0, 0, 0, 0, 104, 25, 0, 0, 0, 0, 104, 65, 0, 0, 0, 0, 40, 65, 0, 0, 0, 0, 40, 120, 0, 0, 0, 0, 152, 120, 0, 0, 0, 0, 152, 24, 0, 0, 0, 0, 248, 24, 0, 0, 0, 0, 248, 137, 0, 0, 0, 0, 192, 137, 0, 0, 0, 0, 192, 81, 0, 0, 0, 0, 277, 81, 0, 0, 0, 0, 285, 75, 0, 0, 0, 0, 292, 73, 0, 0, 0, 0, 299, 75, 0, 0, 0, 0, 307, 81, 0, 0, 0, 0, 334, 81)
}
point_count = 17

[node name="Level" type="Node2D"]
script = ExtResource("1_84apw")

[node name="Hud" parent="." instance=ExtResource("7_lyf5f")]

[node name="GraceTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 30.0
one_shot = true

[node name="Spawntimer" type="Timer" parent="."]

[node name="Lower" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAkAAsAAAABAAUAAAAjAAsAAAAAAAUAAAAlAAsAAAACAAUAAAAkAAoAAAABAAQAAAAjAAoAAAACAAQAAAAlAAoAAAACAAQAAAAjAAkAAAACAAQAAAAkAAkAAAACAAQAAAAlAAkAAAACAAQAAAAjAAgAAAAEAAQAAAAjAAcAAAAEAAQAAAAjAAYAAAAEAAQAAAAkAAYAAAAEAAQAAAAkAAcAAAAEAAQAAAAkAAgAAAAEAAQAAAAlAAgAAAAEAAQAAAAlAAcAAAAEAAQAAAAlAAYAAAAEAAQAAAAjAAUAAAAEAAQAAAAjAAQAAAAEAAQAAAAjAAMAAAAEAAQAAAAkAAMAAAAEAAQAAAAkAAQAAAAEAAQAAAAlAAQAAAAEAAQAAAAlAAUAAAAEAAQAAAAkAAUAAAAEAAQAAAAlAAMAAAAEAAQAAAAlAAIAAAAEAAQAAAAlAAEAAAAEAAQAAAAkAAEAAAAEAAQAAAAkAAAAAAAEAAQAAAAkAAIAAAAEAAQAAAAjAAEAAAAEAAQAAAAjAAAAAAAEAAQAAAAjAAIAAAAEAAQAAAAlAAAAAAAEAAQAAAAjAAwAAAAEAAQAAAAjAA0AAAAEAAQAAAAjAA4AAAAEAAQAAAAjAA8AAAAEAAQAAAAkAA8AAAAEAAQAAAAkAA4AAAAEAAQAAAAkAA0AAAAEAAQAAAAkAAwAAAAEAAQAAAAlAAwAAAAEAAQAAAAlAA0AAAAEAAQAAAAlAA4AAAAEAAQAAAAlAA8AAAAEAAQAAAAlABAAAAAEAAQAAAAlABEAAAAEAAQAAAAlABIAAAAEAAQAAAAkABIAAAAEAAQAAAAkABEAAAAEAAQAAAAkABAAAAAEAAQAAAAjABAAAAAEAAQAAAAjABEAAAAEAAQAAAAjABIAAAAEAAQAAAAjABMAAAAEAAQAAAAjABQAAAAEAAQAAAAkABQAAAAEAAQAAAAkABMAAAAEAAQAAAAlABMAAAAEAAQAAAAlABQAAAAEAAQAAAAlABUAAAAEAAQAAAAlABYAAAAEAAQAAAAkABYAAAAEAAQAAAAkABUAAAAEAAQAAAAjABUAAAAEAAQAAAAjABYAAAAEAAQAAAAiABYAAAAEAAQAAAAhABYAAAAEAAQAAAAgABYAAAAEAAQAAAAfABYAAAAEAAQAAAAeABYAAAAEAAQAAAAdABYAAAAEAAQAAAAcABYAAAAEAAQAAAAbABYAAAAEAAQAAAAaABYAAAAEAAQAAAAZABYAAAAEAAQAAAAYABYAAAAEAAQAAAAXABYAAAAEAAQAAAAWABYAAAAEAAQAAAAVABYAAAAEAAQAAAATABYAAAAEAAQAAAAUABYAAAAEAAQAAAAUABUAAAAEAAQAAAATABUAAAAEAAQAAAASABYAAAAEAAQAAAASABUAAAAEAAQAAAARABUAAAAEAAQAAAAQABUAAAAEAAQAAAAPABUAAAAEAAQAAAAOABUAAAAEAAQAAAANABUAAAAEAAQAAAANABYAAAAEAAQAAAAMABYAAAAEAAQAAAAMABUAAAAEAAQAAAARABYAAAAEAAQAAAAQABYAAAAEAAQAAAAPABYAAAAEAAQAAAAOABYAAAAEAAQAAAALABYAAAAEAAQAAAAKABYAAAAEAAQAAAAKABUAAAAEAAQAAAAJABUAAAAEAAQAAAAIABUAAAAEAAQAAAAIABYAAAAEAAQAAAAHABYAAAAEAAQAAAAGABYAAAAEAAQAAAAFABYAAAAEAAQAAAAEABYAAAAEAAQAAAADABYAAAAEAAQAAAACABYAAAAEAAQAAAABABYAAAAEAAQAAAABABUAAAAEAAQAAAAAABUAAAAEAAQAAAACABUAAAAEAAQAAAADABUAAAAEAAQAAAAEABUAAAAEAAQAAAAFABUAAAAEAAQAAAAGABUAAAAEAAQAAAAHABUAAAAEAAQAAAALABUAAAAEAAQAAAAJABYAAAAEAAQAAAAAABYAAAAEAAQAAAAAABQAAAAEAAUAAAABABQAAAAEAAUAAAACABQAAAAEAAUAAAADABQAAAAEAAUAAAAEABQAAAAEAAUAAAAFABQAAAAEAAUAAAAGABQAAAAFAAUAAAAHABQAAAACAAYAAAAIABQAAAACAAcAAAAJABQAAAACAAYAAAAKABQAAAACAAYAAAALABQAAAACAAcAAAAMABQAAAACAAYAAAANABQAAAACAAYAAAAOABQAAAACAAcAAAAPABQAAAACAAYAAAAQABQAAAACAAcAAAARABQAAAADAAUAAAASABQAAAAEAAUAAAATABQAAAAEAAUAAAAUABQAAAAEAAUAAAAVABQAAAADAAQAAAAiABQAAAAFAAQAAAAVABUAAAADAAUAAAAiABUAAAAFAAUAAAAWABUAAAAEAAUAAAAXABUAAAAEAAUAAAAYABUAAAAEAAUAAAAZABUAAAAEAAUAAAAaABUAAAAEAAUAAAAbABUAAAAEAAUAAAAcABUAAAAEAAUAAAAdABUAAAAEAAUAAAAeABUAAAAEAAUAAAAfABUAAAAEAAUAAAAgABUAAAAEAAUAAAAhABUAAAAEAAUAAAAeAAMAAAAEAAIAAAAfAAMAAAAEAAIAAAAfAAQAAAAEAAIAAAAfAAUAAAAEAAIAAAAeAAQAAAAEAAIAAAAeAAUAAAAEAAIAAAAeAAYAAAAEAAIAAAAeAAcAAAAEAAIAAAAeAAgAAAAEAAIAAAAeAAkAAAAEAAIAAAAfAAYAAAAEAAIAAAAfAAcAAAAEAAIAAAAfAAgAAAAEAAIAAAAfAAkAAAAEAAIAAAAfAAoAAAAEAAIAAAAfAAsAAAAEAAIAAAAfAAwAAAAEAAIAAAAeAAoAAAAEAAIAAAAeAAsAAAAEAAIAAAAeAAwAAAAEAAIAAAAeAA0AAAAEAAIAAAAeAA4AAAAEAAIAAAAeAA8AAAAEAAIAAAAeABAAAAAEAAIAAAAeABEAAAAEAAIAAAAfABAAAAAEAAIAAAAfAA8AAAAEAAIAAAAfAA4AAAAEAAIAAAAfAA0AAAAEAAIAAAAfABEAAAAEAAIAAAAdABEAAAAEAAIAAAAcABEAAAAEAAIAAAAbABEAAAAEAAIAAAAaABEAAAAEAAIAAAAZABEAAAAEAAIAAAAYABEAAAAEAAIAAAAXABEAAAAEAAIAAAAXABAAAAAEAAIAAAAXAA8AAAAEAAIAAAAYAA8AAAAEAAIAAAAYAA4AAAAEAAIAAAAYAA0AAAAEAAIAAAAXAA0AAAAEAAIAAAAXAAwAAAAEAAIAAAAXAAsAAAAEAAIAAAAXAAoAAAAEAAIAAAAYAAoAAAAEAAIAAAAYAAsAAAAEAAIAAAAYAAwAAAAEAAIAAAAXAA4AAAAEAAIAAAAYABAAAAAEAAIAAAAZAA8AAAADAAIAAAAdAA8AAAAFAAIAAAAdAAgAAAAFAAIAAAAgAAgAAAADAAIAAAAiAAgAAAAFAAIAAAAmAAgAAAADAAIAAAARAA0AAAAFAAIAAAAGAA0AAAADAAIAAAALAAYAAAAFAAIAAAAZABAAAAADAAMAAAAdABAAAAAFAAMAAAAcABAAAAAEAAMAAAAbABAAAAAEAAMAAAAaABAAAAAEAAMAAAAXAAkAAAAEAAMAAAAYAAkAAAAEAAMAAAAZAAkAAAAEAAMAAAAaAAkAAAAEAAMAAAAbAAkAAAAEAAMAAAAcAAkAAAAEAAMAAAAdAAkAAAAFAAMAAAAgAAkAAAADAAMAAAAiAAkAAAAFAAMAAAAhAAkAAAAEAAMAAAAnAAkAAAAEAAMAAAAmAAkAAAADAAMAAAAfAAIAAAAEAAMAAAAeAAIAAAAEAAMAAAAdAAIAAAAEAAMAAAAcAAIAAAAEAAMAAAAbAAIAAAAEAAMAAAAaAAIAAAAEAAMAAAAZAAIAAAAEAAMAAAAYAAIAAAAEAAMAAAAXAAIAAAAEAAMAAAAWAAIAAAAEAAMAAAAVAAIAAAAEAAMAAAAUAAIAAAAEAAMAAAATAAIAAAAEAAMAAAASAAIAAAAEAAMAAAARAA4AAAAFAAMAAAAQAA4AAAAEAAMAAAAPAA4AAAAEAAMAAAAOAA4AAAAEAAMAAAANAA4AAAAEAAMAAAAMAA4AAAAEAAMAAAALAA4AAAAEAAMAAAAKAA4AAAAEAAMAAAAJAA4AAAAEAAMAAAAIAA4AAAAEAAMAAAAHAA4AAAAEAAMAAAAGAA4AAAADAAMAAAAEAAcAAAAEAAMAAAAFAAcAAAAEAAMAAAAGAAcAAAAEAAMAAAAHAAcAAAAEAAMAAAAIAAcAAAAEAAMAAAAJAAcAAAAEAAMAAAAKAAcAAAAEAAMAAAALAAcAAAAFAAMAAAANAAIAAAAEAAMAAAAMAAIAAAAEAAMAAAALAAIAAAAEAAMAAAAKAAIAAAAEAAMAAAAJAAIAAAAEAAMAAAAIAAIAAAAEAAMAAAAHAAIAAAAEAAMAAAAGAAIAAAAEAAMAAAAFAAIAAAAEAAMAAAAEAAIAAAAEAAMAAAADAAIAAAAEAAMAAAACAAIAAAAEAAMAAAABAAIAAAAEAAMAAAAAAAIAAAAEAAMAAAAdAAMAAAAEAAIAAAAcAAMAAAAEAAIAAAAbAAMAAAAEAAIAAAAaAAMAAAAEAAIAAAAZAAMAAAAEAAIAAAAYAAMAAAAEAAIAAAAXAAMAAAAEAAIAAAAWAAMAAAAEAAIAAAAVAAMAAAAEAAIAAAAUAAMAAAAEAAIAAAATAAMAAAAEAAIAAAASAAMAAAAEAAIAAAAZAAoAAAAEAAIAAAAaAAoAAAAEAAIAAAAbAAoAAAAEAAIAAAAcAAoAAAAEAAIAAAAdAAoAAAAEAAIAAAAgAAoAAAAEAAIAAAAhAAoAAAAEAAIAAAAiAAoAAAAEAAIAAAAmAAoAAAAEAAIAAAAnAAoAAAAEAAIAAAASAAQAAAAEAAIAAAASAAUAAAAEAAIAAAASAAYAAAAEAAIAAAATAAYAAAAEAAIAAAATAAUAAAAEAAIAAAATAAQAAAAEAAIAAAASAAcAAAAEAAIAAAASAAgAAAAEAAIAAAASAAkAAAAEAAIAAAASAAoAAAAEAAIAAAATAAcAAAAEAAIAAAATAAgAAAAEAAIAAAATAAkAAAAEAAIAAAATAAoAAAAEAAIAAAATAAsAAAAEAAIAAAATAAwAAAAEAAIAAAASAAwAAAAEAAIAAAASAAsAAAAEAAIAAAASAA0AAAAEAAIAAAATAA0AAAAEAAIAAAATAA4AAAAEAAIAAAATAA8AAAAEAAIAAAASAA8AAAAEAAIAAAASAA4AAAAEAAIAAAARAA8AAAAEAAIAAAAQAA8AAAAEAAIAAAAPAA8AAAAEAAIAAAAOAA8AAAAEAAIAAAANAA8AAAAEAAIAAAAMAA8AAAAEAAIAAAALAA8AAAAEAAIAAAAKAA8AAAAEAAIAAAAJAA8AAAAEAAIAAAAIAA8AAAAEAAIAAAAHAA8AAAAEAAIAAAAGAA8AAAAEAAIAAAAFAA8AAAAEAAIAAAAEAA8AAAAEAAIAAAAEAA4AAAAEAAIAAAAEAA0AAAAEAAIAAAAEAAwAAAAEAAIAAAAFAAwAAAAEAAIAAAAFAA0AAAAEAAIAAAAFAA4AAAAEAAIAAAAEAAsAAAAEAAIAAAAEAAoAAAAEAAIAAAAEAAkAAAAEAAIAAAAEAAgAAAAEAAIAAAAFAAgAAAAEAAIAAAAFAAkAAAAEAAIAAAAFAAoAAAAEAAIAAAAFAAsAAAAEAAIAAAAGAAgAAAAEAAIAAAAHAAgAAAAEAAIAAAAIAAgAAAAEAAIAAAAJAAgAAAAEAAIAAAAKAAgAAAAEAAIAAAALAAgAAAAEAAIAAAAMAAgAAAAEAAIAAAANAAgAAAAEAAIAAAANAAcAAAAEAAIAAAANAAYAAAAEAAIAAAANAAUAAAAEAAIAAAANAAQAAAAEAAIAAAANAAMAAAAEAAIAAAAMAAMAAAAEAAIAAAAMAAQAAAAEAAIAAAAMAAUAAAAEAAIAAAAMAAYAAAAEAAIAAAAMAAcAAAAEAAIAAAALAAMAAAAEAAIAAAAKAAMAAAAEAAIAAAAJAAMAAAAEAAIAAAAIAAMAAAAEAAIAAAAHAAMAAAAEAAIAAAAGAAMAAAAEAAIAAAAFAAMAAAAEAAIAAAAEAAMAAAAEAAIAAAADAAMAAAAEAAIAAAACAAMAAAAEAAIAAAABAAMAAAAEAAIAAAAAAAMAAAAEAAIAAAALAAQAAAAEAAIAAAAGAAkAAAAEAAIAAAAUAAQAAAAEAAIAAAAdAAQAAAAEAAIAAAAdAAsAAAAEAAIAAAAZAAsAAAAEAAIAAAAgAAsAAAAEAAIAAAAmAAsAAAAEAAIAAAAHABAAAAAAAAYAAAAIABAAAAAAAAYAAAAJABAAAAAAAAYAAAAKABAAAAAAAAYAAAALABAAAAAAAAYAAAAMABAAAAAAAAYAAAANABAAAAAAAAYAAAAOABAAAAAAAAYAAAAPABAAAAAAAAYAAAAQABAAAAAAAAYAAAARABAAAAAAAAYAAAAGABAAAAAAAAYAAAAHABEAAAABAAYAAAAHABIAAAABAAYAAAAHABMAAAABAAYAAAAIABEAAAABAAYAAAAIABIAAAABAAYAAAAIABMAAAABAAYAAAAJABMAAAABAAYAAAAJABIAAAABAAYAAAAJABEAAAABAAYAAAAKABEAAAABAAYAAAAKABIAAAABAAYAAAAKABMAAAABAAYAAAALABEAAAABAAYAAAALABIAAAABAAYAAAALABMAAAABAAYAAAAMABMAAAABAAYAAAAMABIAAAABAAYAAAAMABEAAAABAAYAAAANABMAAAABAAYAAAANABIAAAABAAYAAAANABEAAAABAAYAAAAOABEAAAABAAYAAAAOABIAAAABAAYAAAAOABMAAAABAAYAAAAPABMAAAABAAYAAAAPABIAAAABAAYAAAAPABEAAAABAAYAAAAQABEAAAABAAYAAAAQABIAAAABAAYAAAAQABMAAAABAAYAAAARABMAAAABAAcAAAAGABMAAAAAAAcAAAA=")
tile_set = ExtResource("2_goysy")

[node name="Upper" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAEAAAABAAMAAAACAAEAAAABAAMAAAADAAEAAAABAAMAAAAEAAEAAAABAAMAAAAFAAEAAAABAAMAAAAGAAEAAAABAAMAAAAHAAEAAAABAAMAAAAIAAEAAAABAAMAAAAJAAEAAAABAAMAAAAKAAEAAAABAAMAAAALAAEAAAABAAMAAAAMAAEAAAABAAMAAAAFAAYAAAABAAMAAAAGAAYAAAABAAMAAAAHAAYAAAABAAMAAAAIAAYAAAABAAMAAAAJAAYAAAABAAMAAAAKAAYAAAABAAMAAAAEAAYAAAABAAMAAAAHAA0AAAABAAMAAAAIAA0AAAABAAMAAAAJAA0AAAABAAMAAAAKAA0AAAABAAMAAAALAA0AAAABAAMAAAAMAA0AAAABAAMAAAANAA0AAAABAAMAAAAOAA0AAAABAAMAAAAPAA0AAAABAAMAAAAQAA0AAAABAAMAAAAXAAgAAAABAAMAAAAYAAgAAAABAAMAAAAZAAgAAAABAAMAAAAaAAgAAAABAAMAAAAbAAgAAAABAAMAAAAcAAgAAAABAAMAAAASAAEAAAABAAMAAAATAAEAAAABAAMAAAAUAAEAAAABAAMAAAAVAAEAAAABAAMAAAAWAAEAAAABAAMAAAAXAAEAAAABAAMAAAAYAAEAAAABAAMAAAAZAAEAAAABAAMAAAAaAAEAAAABAAMAAAAbAAEAAAABAAMAAAAcAAEAAAABAAMAAAAdAAEAAAABAAMAAAAeAAEAAAABAAMAAAAfAAEAAAABAAMAAAAhAAgAAAABAAMAAAAiAAgAAAACAAMAAAAmAAgAAAAAAAMAAAAnAAgAAAABAAMAAAAhABQAAAABAAMAAAAgABQAAAABAAMAAAAfABQAAAABAAMAAAAeABQAAAABAAMAAAAdABQAAAABAAMAAAAcABQAAAABAAMAAAAbABQAAAABAAMAAAAaABQAAAABAAMAAAAZABQAAAABAAMAAAAYABQAAAABAAMAAAAXABQAAAABAAMAAAAWABQAAAABAAMAAAAUABMAAAABAAMAAAATABMAAAABAAMAAAASABMAAAABAAMAAAARABMAAAAAAAMAAAAGABMAAAACAAMAAAAFABMAAAABAAMAAAAEABMAAAABAAMAAAADABMAAAABAAMAAAACABMAAAABAAMAAAABABMAAAABAAMAAAAAABMAAAABAAMAAAAAABIAAAABAAIAAAABABIAAAABAAIAAAACABIAAAABAAIAAAADABIAAAABAAIAAAAEABIAAAABAAIAAAAFABIAAAABAAIAAAAGABIAAAACAAIAAAARABIAAAAAAAIAAAASABIAAAABAAIAAAATABIAAAABAAIAAAAUABIAAAABAAIAAAAWABMAAAABAAIAAAAXABMAAAABAAIAAAAYABMAAAABAAIAAAAZABMAAAABAAIAAAAaABMAAAABAAIAAAAbABMAAAABAAIAAAAcABMAAAABAAIAAAAdABMAAAABAAIAAAAeABMAAAABAAIAAAAfABMAAAABAAIAAAAgABMAAAABAAIAAAAhABMAAAABAAIAAAAQAAwAAAABAAIAAAAPAAwAAAABAAIAAAAOAAwAAAABAAIAAAANAAwAAAABAAIAAAAMAAwAAAABAAIAAAALAAwAAAABAAIAAAAKAAwAAAABAAIAAAAJAAwAAAABAAIAAAAIAAwAAAABAAIAAAAHAAwAAAABAAIAAAAEAAUAAAABAAIAAAAFAAUAAAABAAIAAAAGAAUAAAABAAIAAAAHAAUAAAABAAIAAAAIAAUAAAABAAIAAAAJAAUAAAABAAIAAAAKAAUAAAABAAIAAAAAAAAAAAABAAIAAAABAAAAAAABAAIAAAACAAAAAAABAAIAAAADAAAAAAABAAIAAAAEAAAAAAABAAIAAAAFAAAAAAABAAIAAAAGAAAAAAABAAIAAAAHAAAAAAABAAIAAAAIAAAAAAABAAIAAAAJAAAAAAABAAIAAAAKAAAAAAABAAIAAAALAAAAAAABAAIAAAAMAAAAAAABAAIAAAAAAAEAAAABAAMAAAASAAAAAAABAAIAAAATAAAAAAABAAIAAAAUAAAAAAABAAIAAAAVAAAAAAABAAIAAAAWAAAAAAABAAIAAAAXAAAAAAABAAIAAAAYAAAAAAABAAIAAAAZAAAAAAABAAIAAAAaAAAAAAABAAIAAAAbAAAAAAABAAIAAAAcAAAAAAABAAIAAAAdAAAAAAABAAIAAAAeAAAAAAABAAIAAAAfAAAAAAABAAIAAAAhAAcAAAABAAIAAAAiAAcAAAACAAIAAAAnAAcAAAABAAIAAAAgAAgAAAAAAAMAAAAZAA8AAAAAAAMAAAAVABQAAAAAAAMAAAAGAA0AAAAAAAMAAAANAAEAAAABAAMAAAANAAAAAAABAAIAAAALAAYAAAACAAMAAAARAA0AAAACAAMAAAAdAA8AAAACAAMAAAAdAAgAAAACAAMAAAAiABQAAAACAAMAAAAVABMAAAAAAAIAAAAGAAwAAAAAAAIAAAAXAAcAAAABAAIAAAAZAA4AAAAAAAIAAAAcAAcAAAABAAIAAAAbAAcAAAABAAIAAAAaAAcAAAABAAIAAAAZAAcAAAABAAIAAAAYAAcAAAABAAIAAAAgAAcAAAAAAAIAAAAmAAcAAAAAAAIAAAAdAA4AAAACAAIAAAAiABMAAAACAAIAAAARAAwAAAACAAIAAAALAAUAAAACAAIAAAAdAAcAAAACAAIAAAAcAA4AAAABAAIAAAAbAA4AAAABAAIAAAAaAA4AAAABAAIAAAAaAA8AAAABAAMAAAAbAA8AAAABAAMAAAAcAA8AAAABAAMAAAAZAA0AAAAAAAEAAAAZAAwAAAAAAAEAAAAUAAUAAAAAAAEAAAAUAAYAAAAAAAEAAAAUAAcAAAAAAAEAAAAUAAgAAAAAAAEAAAAUAAkAAAAAAAEAAAAUAAoAAAAAAAEAAAAUAAsAAAAAAAEAAAAUAAwAAAAAAAEAAAAUAA0AAAAAAAEAAAAUAA4AAAAAAAEAAAAUAA8AAAAAAAEAAAAGAAoAAAAAAAEAAAAGAAsAAAAAAAEAAAAOAAIAAAAAAAEAAAAOAAMAAAAAAAEAAAAOAAQAAAAAAAEAAAAOAAUAAAAAAAEAAAAOAAYAAAAAAAEAAAAOAAcAAAAAAAEAAAAOAAgAAAAAAAEAAAAOAAEAAAAAAAEAAAAgAAEAAAAAAAEAAAAgAAIAAAAAAAEAAAAgAAMAAAAAAAEAAAAgAAQAAAAAAAEAAAAgAAUAAAAAAAEAAAAgAAYAAAAAAAEAAAAmAAYAAAAAAAEAAAAmAAUAAAAAAAEAAAAmAAQAAAAAAAEAAAAmAAMAAAAAAAEAAAAmAAIAAAAAAAEAAAAmAAEAAAAAAAEAAAAmAAAAAAAAAAEAAAAmAAwAAAAAAAEAAAAmAA0AAAAAAAEAAAAmAA4AAAAAAAEAAAAmAA8AAAAAAAEAAAAmABAAAAAAAAEAAAAmABEAAAAAAAEAAAAmABIAAAAAAAEAAAAmABMAAAAAAAEAAAAmABQAAAAAAAEAAAAmABUAAAAAAAEAAAAmABYAAAAAAAEAAAAgAAwAAAAAAAEAAAAgAA0AAAAAAAEAAAAgAA4AAAAAAAEAAAAgAA8AAAAAAAEAAAAgABAAAAAAAAEAAAAgABEAAAAAAAEAAAAWABEAAAACAAEAAAAWABAAAAACAAEAAAAWAA8AAAACAAEAAAAWAA4AAAACAAEAAAAWAA0AAAACAAEAAAAWAAwAAAACAAEAAAAWAAgAAAACAAEAAAAWAAkAAAACAAEAAAAWAAoAAAACAAEAAAAWAAsAAAACAAEAAAAdAAwAAAACAAEAAAAdAA0AAAACAAEAAAAiAAwAAAACAAEAAAAiAA0AAAACAAEAAAAiAA4AAAACAAEAAAAiAA8AAAACAAEAAAAiABAAAAACAAEAAAAiABEAAAACAAEAAAAiABIAAAACAAEAAAAiAAYAAAACAAEAAAAiAAUAAAACAAEAAAAiAAQAAAACAAEAAAAiAAMAAAACAAEAAAAiAAIAAAACAAEAAAAiAAEAAAACAAEAAAAiAAAAAAACAAEAAAARAAEAAAACAAEAAAARAAIAAAACAAEAAAARAAMAAAACAAEAAAARAAQAAAACAAEAAAARAAUAAAACAAEAAAARAAYAAAACAAEAAAARAAcAAAACAAEAAAARAAgAAAACAAEAAAARAAkAAAACAAEAAAARAAoAAAACAAEAAAARAAsAAAACAAEAAAADAAYAAAACAAEAAAADAAcAAAACAAEAAAADAAgAAAACAAEAAAADAAkAAAACAAEAAAADAAoAAAACAAEAAAADAAsAAAACAAEAAAADAAwAAAACAAEAAAADAA0AAAACAAEAAAADAA4AAAACAAEAAAADAA8AAAACAAEAAAAEABAAAAABAAAAAAAFABAAAAABAAAAAAAGABAAAAACAAAAAAARABAAAAAAAAAAAAASABAAAAABAAAAAAATABAAAAABAAAAAAAVAAQAAAABAAAAAAAWAAQAAAABAAAAAAAXAAQAAAABAAAAAAAYAAQAAAABAAAAAAAZAAQAAAABAAAAAAAaAAQAAAABAAAAAAAbAAQAAAABAAAAAAAcAAQAAAABAAAAAAAhAAsAAAABAAAAAAAnAAsAAAABAAAAAAAXABIAAAABAAAAAAAYABIAAAABAAAAAAAZABIAAAABAAAAAAAaABIAAAABAAAAAAAbABIAAAABAAAAAAAcABIAAAABAAAAAAAdABIAAAABAAAAAAAeABIAAAABAAAAAAAfABIAAAABAAAAAAAKAAQAAAABAAAAAAAJAAQAAAABAAAAAAAIAAQAAAABAAAAAAAHAAQAAAABAAAAAAAGAAQAAAABAAAAAAAFAAQAAAABAAAAAAAEAAQAAAABAAAAAAADAAQAAAABAAAAAAACAAQAAAABAAAAAAABAAQAAAABAAAAAAAAAAQAAAABAAAAAAAOAAAAAAAEAAAAAAAVABIAAAAEAAAAAAAgABIAAAAEAAEAAAAOAAkAAAAEAAEAAAAGAAkAAAAAAAAAAAAHAAkAAAABAAAAAAAIAAkAAAABAAAAAAAJAAkAAAABAAAAAAAKAAkAAAABAAAAAAALAAkAAAABAAAAAAAMAAkAAAABAAAAAAANAAkAAAABAAAAAAARAAAAAAADAAAAAAAUAAQAAAAAAAAAAAAWAAcAAAADAAAAAAAWABIAAAADAAEAAAAgAAsAAAAAAAAAAAAiAAsAAAACAAAAAAAmAAsAAAAAAAAAAAAnAAwAAAABAAEAAAAnAA0AAAABAAEAAAAnAA4AAAABAAEAAAAnAA8AAAABAAEAAAAnABAAAAABAAEAAAAnABEAAAABAAEAAAAnABIAAAABAAEAAAAnABMAAAABAAEAAAAnABQAAAABAAEAAAAnABUAAAABAAEAAAAnABYAAAABAAEAAAAhAAwAAAABAAEAAAAhAA0AAAABAAEAAAAhAA4AAAABAAEAAAAhAA8AAAABAAEAAAAhABAAAAABAAEAAAAhABEAAAABAAEAAAAhABIAAAABAAEAAAAaAAwAAAABAAEAAAAaAA0AAAABAAEAAAAbAA0AAAABAAEAAAAcAA0AAAABAAEAAAAcAAwAAAABAAEAAAAbAAwAAAABAAEAAAAaAAsAAAABAAAAAAAbAAsAAAABAAAAAAAcAAsAAAABAAAAAAAdAAsAAAACAAAAAAAZAAsAAAAAAAAAAAAdAAUAAAACAAEAAAAdAAYAAAACAAEAAAAdAAQAAAACAAAAAAAWAAUAAAABAAEAAAAXAAUAAAABAAEAAAAYAAUAAAABAAEAAAAZAAUAAAABAAEAAAAaAAUAAAABAAEAAAAbAAUAAAABAAEAAAAcAAUAAAABAAEAAAAcAAYAAAABAAEAAAAbAAYAAAABAAEAAAAaAAYAAAABAAEAAAAZAAYAAAABAAEAAAAYAAYAAAABAAEAAAAXAAYAAAABAAEAAAAWAAYAAAABAAEAAAAVAAYAAAABAAEAAAAVAAcAAAABAAEAAAAVAAgAAAABAAEAAAAVAAkAAAABAAEAAAAVAAoAAAABAAEAAAAVAAsAAAABAAEAAAAVAAwAAAABAAEAAAAVAA0AAAABAAEAAAAVAA4AAAABAAEAAAAVAA8AAAABAAEAAAAVABAAAAABAAEAAAAVABEAAAABAAEAAAAUABEAAAABAAEAAAATABEAAAABAAEAAAASABEAAAABAAEAAAAUABAAAAAEAAEAAAARABEAAAAAAAEAAAAGABEAAAACAAEAAAAFABEAAAABAAEAAAAEABEAAAABAAEAAAADABEAAAABAAEAAAACABEAAAABAAEAAAABABEAAAABAAEAAAAAABEAAAABAAEAAAAAABAAAAABAAEAAAAAAA8AAAABAAEAAAAAAA4AAAABAAEAAAABAA4AAAABAAEAAAABAA0AAAABAAEAAAACAA4AAAABAAEAAAACAA8AAAABAAEAAAACABAAAAABAAEAAAABABAAAAABAAEAAAADABAAAAADAAEAAAABAA8AAAABAAEAAAACAA0AAAABAAEAAAACAAwAAAABAAEAAAACAAsAAAABAAEAAAACAAoAAAABAAEAAAACAAkAAAABAAEAAAACAAgAAAABAAEAAAACAAcAAAABAAEAAAACAAYAAAABAAEAAAACAAUAAAABAAEAAAABAAUAAAABAAEAAAAAAAUAAAABAAEAAAAAAAYAAAABAAEAAAAAAAcAAAABAAEAAAAAAAgAAAABAAEAAAAAAAkAAAABAAEAAAAAAAoAAAABAAEAAAAAAAsAAAABAAEAAAAAAAwAAAABAAEAAAAAAA0AAAABAAEAAAABAAwAAAABAAEAAAABAAsAAAABAAEAAAABAAoAAAABAAEAAAABAAkAAAABAAEAAAABAAgAAAABAAEAAAABAAcAAAABAAEAAAABAAYAAAABAAEAAAADAAUAAAADAAAAAAALAAQAAAACAAAAAAAHAAoAAAABAAEAAAAHAAsAAAABAAEAAAAIAAsAAAABAAEAAAAJAAsAAAABAAEAAAAKAAsAAAABAAEAAAALAAsAAAABAAEAAAAMAAsAAAABAAEAAAANAAsAAAABAAEAAAAOAAsAAAABAAEAAAAPAAsAAAABAAEAAAAQAAsAAAABAAEAAAAQAAoAAAABAAEAAAAPAAoAAAABAAEAAAAOAAoAAAABAAEAAAANAAoAAAABAAEAAAAMAAoAAAABAAEAAAALAAoAAAABAAEAAAAKAAoAAAABAAEAAAAJAAoAAAABAAEAAAAIAAoAAAABAAEAAAAPAAkAAAABAAEAAAAPAAgAAAABAAEAAAAPAAcAAAABAAEAAAAPAAYAAAABAAEAAAAPAAUAAAABAAEAAAAPAAQAAAABAAEAAAAPAAMAAAABAAEAAAAPAAIAAAABAAEAAAAPAAEAAAABAAEAAAAQAAEAAAABAAEAAAAQAAAAAAABAAEAAAAPAAAAAAABAAEAAAAQAAIAAAABAAEAAAAQAAMAAAABAAEAAAAQAAQAAAABAAEAAAAQAAUAAAABAAEAAAAQAAYAAAABAAEAAAAQAAcAAAABAAEAAAAQAAgAAAABAAEAAAAQAAkAAAABAAEAAAAhAAYAAAABAAEAAAAhAAUAAAABAAEAAAAhAAQAAAABAAEAAAAhAAMAAAABAAEAAAAhAAIAAAABAAEAAAAhAAEAAAABAAEAAAAhAAAAAAABAAEAAAAgAAAAAAAEAAAAAAAnAAYAAAABAAEAAAAnAAUAAAABAAEAAAAnAAQAAAABAAEAAAAnAAMAAAABAAEAAAAnAAIAAAABAAEAAAAnAAEAAAABAAEAAAAnAAAAAAABAAEAAAAjAAgAAAADAAYAAAAkAAgAAAAEAAYAAAAlAAgAAAAFAAYAAAAlAAkAAAAFAAcAAAAkAAkAAAAFAAcAAAAjAAkAAAAFAAcAAAAlAAoAAAAFAAgAAAAkAAoAAAAEAAgAAAAjAAoAAAADAAgAAAAVAAUAAAABAAEAAAA=")
tile_set = ExtResource("2_goysy")

[node name="Path" type="Path2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -2)
curve = SubResource("Curve2D_p5cak")
script = ExtResource("2_0c63k")
metadata/_edit_lock_ = true

[node name="TowerSpots" type="Node2D" parent="."]

[node name="TowerSpot2" parent="TowerSpots" instance=ExtResource("4_shn85")]
position = Vector2(128, 19)

[node name="TowerSpot" parent="TowerSpots" instance=ExtResource("4_shn85")]
position = Vector2(85, 38)

[node name="TowerSpot4" parent="TowerSpots" instance=ExtResource("4_shn85")]
position = Vector2(63, 86)

[node name="TowerSpot3" parent="TowerSpots" instance=ExtResource("4_shn85")]
position = Vector2(15, 86)

[node name="TowerSpot5" parent="TowerSpots" instance=ExtResource("4_shn85")]
position = Vector2(45, 139)

[node name="TowerSpot6" parent="TowerSpots" instance=ExtResource("4_shn85")]
position = Vector2(147, 139)

[node name="TowerSpot7" parent="TowerSpots" instance=ExtResource("4_shn85")]
position = Vector2(172, 44)

[node name="TowerSpot8" parent="TowerSpots" instance=ExtResource("4_shn85")]
position = Vector2(220, 102)

[node name="TowerSpot10" parent="TowerSpots" instance=ExtResource("4_shn85")]
position = Vector2(268, 47)

[node name="TowerSpot11" parent="TowerSpots" instance=ExtResource("4_shn85")]
position = Vector2(128, 86)

[node name="TowerVisuals" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("3_nm12d")

[node name="Wave 1" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("7_7i1a0")])
amounts = Array[int]([15])
spawn_time = 2.2

[node name="Wave 2" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("7_7i1a0")])
amounts = Array[int]([25])
spawn_time = 2.0

[node name="Wave 3" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("7_7i1a0"), ExtResource("8_86v1t")])
amounts = Array[int]([35, 5])
spawn_time = 1.5

[node name="Wave 4" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("8_86v1t"), ExtResource("7_7i1a0"), ExtResource("8_86v1t"), ExtResource("7_7i1a0")])
amounts = Array[int]([10, 15, 10, 15])
spawn_time = 1.2

[node name="Wave 5" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("7_7i1a0"), ExtResource("8_86v1t"), ExtResource("7_7i1a0"), ExtResource("8_86v1t"), ExtResource("7_7i1a0"), ExtResource("8_86v1t")])
amounts = Array[int]([5, 5, 5, 5, 5, 5])
spawn_time = 1.0

[node name="Wave 6" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("8_86v1t"), ExtResource("7_7i1a0"), ExtResource("8_86v1t")])
amounts = Array[int]([20, 5, 15])
spawn_time = 1.0

[node name="Wave 7" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("7_7i1a0"), ExtResource("8_86v1t"), ExtResource("7_7i1a0")])
amounts = Array[int]([40, 15, 40])
spawn_time = 0.7

[node name="Wave 8" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("8_86v1t")])
amounts = Array[int]([50])
spawn_time = 0.7

[node name="Wave 9" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("8_86v1t"), ExtResource("7_7i1a0"), ExtResource("8_86v1t"), ExtResource("7_7i1a0")])
amounts = Array[int]([20, 20, 20, 20])
spawn_time = 0.7

[node name="Wave 10" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("7_7i1a0"), ExtResource("9_jtiae"), ExtResource("8_86v1t")])
amounts = Array[int]([60, 1, 5])
spawn_time = 0.7

[node name="Wave 11" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("9_jtiae"), ExtResource("7_7i1a0")])
amounts = Array[int]([2, 10, 2, 30])
spawn_time = 0.7

[node name="Wave 12" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("9_jtiae"), ExtResource("8_86v1t")])
amounts = Array[int]([4, 15, 4, 15])
spawn_time = 0.7

[node name="Wave 13" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("8_86v1t"), ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("7_7i1a0"), ExtResource("9_jtiae")])
amounts = Array[int]([20, 10, 20, 40, 2])

[node name="Wave 14" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("7_7i1a0"), ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("9_jtiae"), ExtResource("7_7i1a0"), ExtResource("8_86v1t")])
amounts = Array[int]([20, 5, 20, 5, 20, 10])

[node name="Wave 15" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("7_7i1a0"), ExtResource("9_jtiae"), ExtResource("8_86v1t")])
amounts = Array[int]([10, 20, 20, 10, 10])
health_multiplier = 1.5

[node name="Wave 16" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("7_7i1a0"), ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("9_jtiae"), ExtResource("7_7i1a0")])
amounts = Array[int]([30, 10, 30, 10, 40])
health_multiplier = 1.5

[node name="Wave 17" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("8_86v1t"), ExtResource("7_7i1a0"), ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("9_jtiae")])
amounts = Array[int]([30, 30, 15, 25, 7, 25, 7])
health_multiplier = 1.5

[node name="Wave 18" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("8_86v1t"), ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("9_jtiae"), ExtResource("7_7i1a0"), ExtResource("9_jtiae")])
amounts = Array[int]([25, 5, 25, 5, 50, 5, 30, 5])
health_multiplier = 1.5
speed_multiplier = 1.5

[node name="Wave 19" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("7_7i1a0"), ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("7_7i1a0"), ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("9_jtiae"), ExtResource("7_7i1a0")])
amounts = Array[int]([20, 20, 30, 20, 10, 30, 10, 50])
health_multiplier = 1.5
speed_multiplier = 1.5

[node name="Wave 20" type="Node" parent="WaveManager"]
script = ExtResource("4_2p31x")
enemies = Array[PackedScene]([ExtResource("7_7i1a0"), ExtResource("9_nby30")])
amounts = Array[int]([10, 1])
health_multiplier = 1.5
speed_multiplier = 1.5

[node name="EndlessWave" type="Node" parent="WaveManager"]
script = ExtResource("11_efw4y")
health_increase = 0.1
speed_increase = 0.1
amount_increase = 0.2
repeat_cycle_amount = 5
enemies = Array[PackedScene]([ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("9_jtiae"), ExtResource("7_7i1a0"), ExtResource("8_86v1t"), ExtResource("9_jtiae"), ExtResource("8_86v1t"), ExtResource("9_jtiae")])
amounts = Array[int]([5, 20, 5, 10, 10, 1, 10, 5])
health_multiplier = 1.5
speed_multiplier = 1.5
spawn_time = 0.4

[connection signal="timeout" from="GraceTimer" to="Hud" method="_on_grace_timer_timeout"]
[connection signal="timeout" from="GraceTimer" to="WaveManager" method="_on_grace_timer_timeout"]
[connection signal="child_entered_tree" from="Path" to="Path" method="_on_child_entered_tree"]
[connection signal="wave_over" from="Path" to="Hud" method="_on_path_wave_over"]
[connection signal="wave_over" from="WaveManager" to="Hud" method="_on_wave_manager_wave_over"]
